WMG112519/force-app/main/default/objects/ObjectFieldMapping__c/ObjectFieldMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ObjectFieldMapping</label>
</CustomObject>