WMG112519/force-app/main/default/objects/ObjectFieldMapping__c/fields/Functionality_Type__c.field-meta.xml
<CustomField>
    <fullName>Functionality_Type__c</fullName>
    <description>If you are adding more condition for one Functionality then please add into the same Functionality Type</description>
    <label>Functionality Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>