WMG112519/force-app/main/default/objects/ObjectFieldMapping__c/fields/Target_Object_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Field_Value__c</fullName>
    <label>Target Object Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>